Dockerfile using docker lib java